--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,17 +8,16 @@ security:
             memory: ~
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        main:
+        secured_area:
+            pattern: ^/
+            form_login:
+                check_path: _security_check
+                login_path: /login
+            logout:
+                path: _demo_logout
+                target: _demo
             anonymous: ~
-            # activate different ways to authenticate
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/event/new , roles: ROLE_USER }
+        - { path: ^/event/create , roles: ROLE_USER }
