--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,22 +2,42 @@
 # http://symfony.com/doc/current/book/security.html
 security:
 
+    role_hierarchy:
+        ROLE_SUPER: [ROLE_USER , ROLE_ADMIN]
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+
+
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
-    providers:
-        in_memory:
-            memory: ~
+    providers:            # Required
+            # Examples:
+            my_in_memory_provider:
+                memory:
+                    users:
+                        foo:
+                            password:           foo
+                            roles:              ROLE_USER
+                        bar:
+                            password:           bar
+                            roles:              [ROLE_USER, ROLE_ADMIN]
+
+                        super:
+                          password: super
+                          roles: ROLE_SUPER
 
     firewalls:
         secured_area:
             pattern: ^/
             form_login:
-                check_path: _security_check
-                login_path: /login
+                check_path: login_form
+                login_path: login_form
             logout:
-                path: _demo_logout
-                target: _demo
+                path: logout
+                target: event_index
             anonymous: ~
 
     access_control:
         - { path: ^/event/new , roles: ROLE_USER }
         - { path: ^/event/create , roles: ROLE_USER }
+        #- { path: ^/event/delete, roles : ROLE_ADMIN }
