--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,24 +7,13 @@ security:
 
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        UserBundle\Entity\User: bcrypt
 
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:            # Required
-            # Examples:
-            my_in_memory_provider:
-                memory:
-                    users:
-                        foo:
-                            password:           foo
-                            roles:              ROLE_USER
-                        bar:
-                            password:           bar
-                            roles:              [ROLE_USER, ROLE_ADMIN]
-
-                        super:
-                          password: super
-                          roles: ROLE_SUPER
+        our_database_users:
+            entity: { class: UserBundle:User }
 
     firewalls:
         secured_area:
@@ -38,6 +27,6 @@ security:
             anonymous: ~
 
     access_control:
-        - { path: ^/event/new , roles: ROLE_USER }
-        - { path: ^/event/create , roles: ROLE_USER }
+       # - { path: ^/new , roles: ROLE_USER }
+       # - { path: ^/create , roles: ROLE_USER }
         #- { path: ^/event/delete, roles : ROLE_ADMIN }
