--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,8 @@
 security:
 
     role_hierarchy:
-        ROLE_SUPER: [ROLE_USER , ROLE_ADMIN]
+        ROLE_ADMIN: [ROLE_USER, ROLE_EVENT_CREATE,ROLE_ALLOWED_TO_SWITCH]
+        ROLE_SUPER_ADMIN: [ROLE_USER , ROLE_ADMIN,ROLE_ALLOWED_TO_SWITCH]
 
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
@@ -25,8 +26,15 @@ security:
                 path: logout
                 target: event_index
             anonymous: ~
+            switch_user: ~
+            remember_me:
+                key: "Order 1138"
 
     access_control:
-       # - { path: ^/new , roles: ROLE_USER }
-       # - { path: ^/create , roles: ROLE_USER }
+        - { path: ^/login , roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register , roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/(_wdt|_profiler), roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/(css|js), roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/ , roles: ROLE_USER }
+
         #- { path: ^/event/delete, roles : ROLE_ADMIN }
