--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,7 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    event_report_manager:
+        class: YodaEventBundle\Reporting\EventReportManager
+        arguments: ["@doctrine.orm.entity_manager","@router"]
+
