--- a/src/YodaEventBundle/Resources/config/services.yml
+++ b/src/YodaEventBundle/Resources/config/services.yml
@@ -2,3 +2,8 @@ services:
 #    yoda_event.example:
 #        class: YodaEventBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
+  tyoda_event.twig.event_extension:
+    class: YodaEventBundle\Twig\EventExtension
+    arguments: []
+    tags:
+      - { name: twig.extension}
