--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,6 +36,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    #form:
+    #    resources:
+    #        - "::form_theme.html.twig"
 
 # Doctrine Configuration
 doctrine:
